--- a/Dinosour game/index.html
+++ b/Dinosour game/index.html
@@ -11,6 +11,7 @@
     <div class="world" data-world>
       <div class="score" data-score>0</div>
       <div class="start-screen" data-start-screen>Press Any Key to Start</div>
+      <!-- two ground: replace each other -->
       <img src="imgs/ground.png" class="ground" data-ground />
       <img src="imgs/ground.png" class="ground" data-ground />
       <img src="imgs/dino-stationary.png" class="dino" data-dino />
